6715: Create MXBean retrieveCurrentTransforms function
Reviewed-by: hirt